[package]
name = "jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.dependencies]
bevy = { version = "*", features = ["dynamic"] }

[profile.release.dependencies]
bevy = { version = "*" }

[dependencies]
bevy = { version = "*" }

