[package]
name = "jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
#bevy = "0.6"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }

